[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"


[project]
name = "fwdlap"
description = "Forward Laplacian implementation with JAX tracer"
authors = [{name = "Yixiao Chen", email = "yixiaoc@princeton.edu"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha"
]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "jax>=0.4.36",
]

[project.urls]
Homepage = "https://github.com/y1xiaoc/fwdlap"

[project.optional-dependencies]
test = ["pytest"]


[tool.setuptools]
py-modules = ["fwdlap"]

[tool.setuptools_scm]


[tool.ruff]
select =[
"E", # pycodestyle error
"F", # pyflake
"W", # whitespace
"NPY", # numpy
"TID", # tidy-imports
"B", # bugbear
]
ignore = [
"E721", # Do not compare types, use 'isinstance()'
"E731", # Do not assign a lambda expression, use a def 
"E741", # Don't use I, O, l as variable names
"F401", # unused import
"B011", # Do not assert False
]
line-length = 100
target-version = "py39" # Minimum jax version

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
